# origin_peptides_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/raw/experiments/: Sum_of_Intensity_Chlor_WS_1.csv  Sum_of_Intensity_Chlor_WS_1_trypsin.csv  Sum_of_Intensity_Chlor_WS_2.csv  Sum_of_Intensity_Chlor_WS_2_trypsin.csv  Sum_of_Intensity_Chlor_WS_3.csv  Sum_of_Intensity_Chlor_WS_3_trypsin.csv  Sum_of_Intensity_Chloram.csv  Sum_of_Intensity_D_aa's.csv  Sum_of_Intensity_D_aa's_WS_1.csv  Sum_of_Intensity_D_aa's_WS_1_trypsin.csv  Sum_of_Intensity_D_aa's_WS_2.csv  Sum_of_Intensity_D_aa's_WS_2_trypsin.csv  Sum_of_Intensity_D_aa's_WS_3.csv  Sum_of_Intensity_D_aa's_WS_3_trypsin.csv  Sum_of_Intensity_NaN3.csv  Sum_of_Intensity_NaN3_WS_1.csv  Sum_of_Intensity_NaN3_WS_1_trypsin.csv  Sum_of_Intensity_NaN3_WS_2.csv  Sum_of_Intensity_NaN3_WS_2_trypsin.csv  Sum_of_Intensity_NaN3_WS_3.csv  Sum_of_Intensity_NaN3_WS_3_trypsin.csv  Sum_of_Intensity_Standard.csv  Sum_of_Intensity_Standard_37oC_1.csv  Sum_of_Intensity_Standard_37oC_1_trypsin.csv  Sum_of_Intensity_Standard_37oC_2.csv  Sum_of_Intensity_Standard_37oC_2_trypsin.csv  (+24 more)
docs/: methodology.md
peptide_ml/: __init__.py  feature_glossary.py  figures.py  preprocessing.py  shap_analysis.py  targets.py  train.py
peptide_ml/_tools/: __init__.py  data_processor.py
peptide_ml/features/: README.md  __init__.py  base_feature.py  peptide_features.py
scripts/: 00_build_features.py  01_compute_targets.py  02_train_models.py  03_shap_and_figures.py  run_all.sh
tests/: test_pipeline.py
(+38 files in other folders)
